updated for Team B correct scoring Sun 4 Mar 2018 at 11:51

--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -9,6 +9,9 @@
 
 </menu>
 
+for tools:context=".MainActivity see below...
+https://developer.android.com/studio/write/tool-attributes.html
+
 -->
 
 
